# LightLearn

./: Readme.md
Algo/: controller.py
lightSensor/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
lightSensor/main/: CMakeLists.txt  ble.c  ble.h  globals.h  http.c  http.h  main.c  wifi.c  wifi.h
